<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="copyrigth"><![CDATA[Created by Martin Martinez & Carlos Batista]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="or">or</string>
    <string name="email_verification_message">Check your inbox and verify your email.</string>
    <string name="login_fail_message">Authentication failed.</string>
    <string name="sign_in_fail_google">Google sign in failed</string>
    <string name="sign_up"> Sign up.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="getting_data">Getting Data...</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="devices_found">Devices Found</string>
    <string name="connect_to">Connect to:</string>
    <string name="pair_to">Pair to:</string>
    <string name="connect">Connect</string>
    <string name="searching_devices">Searching for devices....</string>
    <string name="waiting_for_connection">Waiting for connection...</string>
    <string name="searching_wifi">Searching for wifi networks...</string>
    <string name="device_is_connectiong">Device is connecting</string>
    <string name="last_time_used">Last time Used:</string>
    <string name="monthly_limit">Monthly Limit:</string>
    <string name="Keep_going">Keep going!</string>
    <string name="Change_settings">Change settings</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="spaces">Spaces</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="buildings">Buildings</string>
    <string name="routines">Routines</string>
    <string name="monthly_limit_kw_h">Monthly Limit (Kw/h):</string>
    <string name="save">Save</string>
    <string name="casa">Casa</string>
    <string name="building_1">Building 1</string>
    <string name="it_appears_you_don_t_have_any_building_create_a_new_building_by_pressing_the_add_button_below">It appears you don\'t have any Building. Create a new Building by pressing the add button below.</string>
    <string name="sala">Sala</string>
    <string name="spaces_">Spaces:</string>
    <string name="_0">0</string>
    <string name="max">Max</string>
    <string name="date">Date</string>
    <string name="power">Power</string>
    <string name="time">Time</string>
    <string name="min">Min</string>
    <string name="_name">Name:</string>
    <string name="monthly_limit_w_h">Monthly Limit (W/h):</string>
    <string name="space_can_t_be_changed_when_on">Space can\'t be changed when ON</string>
    <string name="space">Space</string>
    <string name="building">Building</string>
    <string name="change_network">Change Network</string>
    <string name="power_state">Power State</string>
    <string name="average_power">Average Power</string>
    <string name="create_a_new_device_by_pressing_the_add_button_below">Create a new Device by pressing the add button below.</string>
    <string name="licuadora">Licuadora</string>
    <string name="_0_w">0 W</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="no_devices_were_found">No devices were found...</string>
    <string name="pair">pair</string>
    <string name="most_used_devices">Most Used Devices</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="vs">vs</string>
    <string name="consumption">Consumption</string>
    <string name="savings">Savings</string>
    <string name="last_month">Last Month</string>
    <string name="consumed">Consumed</string>
    <string name="limit">Limit</string>
    <string name="avg_power">Avg Power</string>
    <string name="time_on">Time On</string>
    <string name="cost">Cost</string>
    <string name="this_month">This Month</string>
    <string name="month_details">Month Details</string>
    <string name="goal">Goal</string>
    <string name="actually">Actually</string>
    <string name="_building">Building:</string>
    <string name="when_should_it_start">When should it start?</string>
    <string name="what_should_happend">What should happend?</string>
    <string name="should_it_stop">Should it stop?</string>
    <string name="delete">Delete</string>
    <string name="create_a_new_routine_by_pressing_the_add_button_below">Create a new Routine by pressing the add button below.</string>
    <string name="monthly_consumption_price">Monthly Consumption Price</string>
    <string name="more_than_700_kwh">More than 700 kwh</string>
    <string name="fixed_charge">Fixed charge</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="espa_ol">Español</string>
    <string name="edit">EDIT</string>
    <string name="_Delete">DELETE</string>
    <string name="_edit">EDIT</string>
    <string name="only_spaces_without_devices_can_be_deleted">Only Spaces without devices can be deleted.</string>
    <string name="this_building_doesn_t_have_spaces_create_a_new_space_by_pressing_the_add_button_below">This Building doesn\'t have spaces, Create a new Space by pressing the add button below.</string>
    <string name="space_1">Space 1</string>
    <string name="actual">Actual</string>
    <string name="average">Average</string>
</resources>
