<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item android:id="@+id/nav_devices"
        android:icon="@drawable/ic_socket"
        android:title="@string/devices"/>
    <item android:id="@+id/nav_spaces"
        android:icon="@drawable/ic_map"
        android:title="@string/spaces"/>
    <item android:id="@+id/nav_buildings"
        android:icon="@drawable/ic_office_block"
        android:title="@string/buildings"/>
    <item android:id="@+id/nav_routines"
        android:icon="@drawable/ic_stopwatch"
        android:title="@string/routines"/>
    <item android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_bars_chart"
        android:title="@string/statistics"/>
    <item android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
</menu>