<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2eb2ff"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="centerInside"
        android:src="@drawable/capture" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/normal_sign_in_buttom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/color4"
                android:text="@string/sign_in_with_email"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />
            </LinearLayout>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_google"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:buttonSize="wide">

            </com.google.android.gms.common.SignInButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/copyrigth"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
</LinearLayout>