<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/logInBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="LIST STATUS"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/wifiListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="300dp"
            android:visibility="gone"
            tools:listitem="@layout/wifi_item_list" />

        <TextView
            android:id="@+id/empty_wifi_list_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_devices_were_found"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loading_wifi_list"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color4"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/network_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/pair_to"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/wifi_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Tricom" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/StyledTilEditText"
            android:backgroundTint="@android:color/white"
            app:passwordToggleTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/wifi_password_editview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                style="@style/StyledTilEditText"
                android:backgroundTint="@android:color/white"
                android:textColor="@android:color/white"
                android:hint="@string/password"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/pair_to_device_buttom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4"
            android:text="@string/pair"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/connect_to_device_buttom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4"
            android:text="@string/connect"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>