<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/space_detail_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:src="@drawable/ic_map" />

            <TextView
                android:id="@+id/space_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxLines="1"
                tools:text="Space"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:background="@color/cardBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:text="@string/devices"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/space_detail_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:text="0"
                        android:layout_alignParentEnd="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:background="@color/cardBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:text="@string/building"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/space_detail_building"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:text="@string/building"
                        android:layout_alignParentEnd="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/cardBackground"
                    android:elevation="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="11dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/ic_bars_chart"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/average_power"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:id="@+id/space_statistics_button"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:background="@color/colorPrimary"
                        android:elevation="5dp"
                        android:clickable="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp">

                        <TextView
                            android:id="@+id/space_average_power"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            tools:text="0 W"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/cardview_light_background"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_limit_w_h"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ProgressBar
                        android:id="@+id/space_limit_progressbas"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:gravity="end"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/space_detail_limit_percentage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:gravity="center_vertical"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:text="25%" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/space_actual_limit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="textEnd"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:text="4566" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="/"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/space_detail_limit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                tools:text="1000" />


                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Button
                    android:id="@+id/space_detail_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/edit"
                    android:textColor="@android:color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp">

                <Button
                    android:id="@+id/space_detail_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/alert"
                    android:text="@string/_Delete"
                    android:textColor="@android:color/white" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/space_detail_delete_info"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/only_spaces_without_devices_can_be_deleted"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>